@@ -34,7 +34,7 @@ requires:
   perl: 5.6.0
 resources:
   bugtracker: https://rt.cpan.org/Public/Dist/Display.html?Name=Task-Error-Pure
-  homepage: https://github.com/tupinek/Task-Error-Pure
+  homepage: https://github.com/michal-josef-spacek/Task-Error-Pure
   license: http://opensource.org/licenses/bsd-license.php
-  repository: git://github.com/tupinek/Task-Error-Pure
+  repository: git://github.com/michal-josef-spacek/Task-Error-Pure
 version: '0.04'
