@@ -27,8 +27,8 @@ requires 'Error::Pure::Output::Text' => 0.22;
 requires 'perl' => '5.6.0';
 resources 'bugtracker' => 'https://rt.cpan.org/Public/Dist/Display.html'.
 	'?Name=Task-Error-Pure';
-resources 'homepage' => 'https://github.com/tupinek/Task-Error-Pure';
-resources 'repository' => 'git://github.com/tupinek/Task-Error-Pure';
+resources 'homepage' => 'https://github.com/michal-josef-spacek/Task-Error-Pure';
+resources 'repository' => 'git://github.com/michal-josef-spacek/Task-Error-Pure';
 test_requires 'Test::More' => 0;
 test_requires 'Test::NoWarnings' => 0;
 tests_recursive;
