@@ -2,6 +2,7 @@
  - Fix Makefile.PL fails with no '.' in @INC.
  - Improve LICENSE AND COPYRIGHT section in doc.
  - Update Module::Install to 1.21 version.
+ - Update author github username.
  - Update author name.
 
 0.03 2015-10-30T08:49:55+01:00
